service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
spec:
  selector:
    app: reactapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
